# ViT-Spectre-Experiments

./: .gitignore  .gitmodules  README.md  dataset_spectre.ipynb  dwt_experiments.ipynb  export.py  fft_approx.py  fft_experiments.ipynb  main.py  pyproject.toml  test.py  train.py  vit_spectre.ipynb  vit_spectre_cifar100.ipynb  vit_spectre_dino_pretrain.ipynb  vit_spectre_mnist.ipynb  vit_spectre_test.pt
configs/: parser.py  spectre_vit.py
inference/: Cargo.toml  Cross.toml  docker-entrypoint.sh  glibc.version
inference/src/: main.rs
runs/spectre_vit_cifar100/: events.out.tfevents.1766864833.kvazar.1362619.0  events.out.tfevents.1766865009.kvazar.1362619.1  events.out.tfevents.1766865331.kvazar.1362619.2  events.out.tfevents.1766865348.kvazar.1370985.0  events.out.tfevents.1766865462.kvazar.1372686.0  events.out.tfevents.1766865588.kvazar.1373818.0  events.out.tfevents.1766865824.kvazar.1376911.0  events.out.tfevents.1766866341.kvazar.1381521.0  events.out.tfevents.1766866358.kvazar.1381521.1  events.out.tfevents.1766866364.kvazar.1381521.2  events.out.tfevents.1766866376.kvazar.1381521.3  events.out.tfevents.1766866384.kvazar.1381864.0  events.out.tfevents.1766866418.kvazar.1382151.0  events.out.tfevents.1766866692.kvazar.1385486.0  events.out.tfevents.1766866716.kvazar.1385737.0  events.out.tfevents.1766867394.kvazar.1391324.0  events.out.tfevents.1766867473.kvazar.1392544.0  events.out.tfevents.1766867681.kvazar.1395404.0  events.out.tfevents.1766867730.kvazar.1395913.0  events.out.tfevents.1766868230.kvazar.1401366.0  events.out.tfevents.1766868269.kvazar.1401768.0  events.out.tfevents.1766868288.kvazar.1401972.0  events.out.tfevents.1766868440.kvazar.1403637.0  events.out.tfevents.1766868536.kvazar.1404702.0  events.out.tfevents.1766868642.kvazar.1404702.1  events.out.tfevents.1766868667.kvazar.1406056.0  events.out.tfevents.1766868915.kvazar.1408415.0  events.out.tfevents.1766870212.kvazar.1417787.0  events.out.tfevents.1766907492.kvazar.1656651.0  events.out.tfevents.1766921495.kvazar.1746273.0  events.out.tfevents.1766922986.kvazar.1764664.0  events.out.tfevents.1766923151.kvazar.1767254.0  events.out.tfevents.1766924398.kvazar.1784834.0  events.out.tfevents.1766925004.kvazar.1793372.0  events.out.tfevents.1766925024.kvazar.1793706.0  events.out.tfevents.1766925058.kvazar.1794228.0  events.out.tfevents.1766931110.kvazar.1875531.0  events.out.tfevents.1766931161.kvazar.1876263.0  events.out.tfevents.1766937452.kvazar.1957823.0  events.out.tfevents.1766937483.kvazar.1957823.1  (+2 more)
spectre_vit/: base_vit.py  spectre.py
spectre_vit/configs/: default.py  fnet_mnist.py  parser.py  spectre_branch.py  spectre_vit.py  spectre_vit_cifar100.py  spectre_vit_mnist.py  vit_cifar100.py  vit_mnist.py
spectre_vit/models/spectre/: hadamar.py  layers.py  spectre.py
spectre_vit/models/spectre_branch/: spectre_branch.py
spectre_vit/models/vit/: vit.py
spectre_vit/modules/: patch_embeddings.py  spectre.py
spectre_vit/profile/: parser.py
spectre_vit/repl/: dataset_spectre.py  dwt_experiments.py  export.py  fft_experiments.py  orthogonal_permut.py  test.py  train.py  vit_spectre_cifar100.py  vit_spectre_mnist.py
vit/: __init__.py  base_vit.py  distillation.py  fourier_vit.py  model.py  spectre.py
